fix : fixed statistic-server unit