@@ -12,7 +12,6 @@ import ru.practicum.service.HitService;
 import ru.practicum.validator.Marker;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static ru.practicum.util.Constants.DATE_TIME_PATTERN;
@@ -24,41 +23,26 @@ import static ru.practicum.util.Constants.DATE_TIME_PATTERN;
 public class HitController {
     private final HitService hitService;
 
-    //    @GetMapping("/stats")
-//    public List<ResponseHitDto> getAllHits(
-//            @RequestParam(name = "start")
-//            @DateTimeFormat(pattern = DATE_TIME_PATTERN) String start,
-//            @RequestParam(name = "end")
-//            @DateTimeFormat(pattern = DATE_TIME_PATTERN) String end,
-//            @RequestParam(name = "uris", required = false) String[] uris,
-//            @RequestParam(name = "unique", defaultValue = "false") Boolean unique) {
-//        log.info("Получен запрос на получение статистики по посещениям с {} по {}", start, end);
-//
-//        //return hitClient.getStatisticsOnHits(start, end, uris, unique);
-//        return hitService.getAllHits();
-//    }
-    //ViewStatsDto
     @GetMapping("/stats")
-    //public List<ViewStatsDto> getAllHits(
     public List<ViewStatsResponseDto> getViewStatistics(
-            //  public List<ViewStatsResponse> getAllHits(
             @RequestParam(name = "start")
             @DateTimeFormat(pattern = DATE_TIME_PATTERN) LocalDateTime start,
             @RequestParam(name = "end")
             @DateTimeFormat(pattern = DATE_TIME_PATTERN) LocalDateTime end,
-            @RequestParam(name = "uris", required = false) String[] uris,
+            @RequestParam(name = "uris", required = false) List<String> uris,
             @RequestParam(name = "unique", defaultValue = "false") Boolean unique) {
         log.info("Получен запрос на получение статистики по посещениям с {} по {}", start, end);
-        List<String> urisList = Arrays.asList(uris);
-        return hitService.getViewStatistics(start, end, urisList, unique);
+        if (uris == null) {
+            uris = List.of("/events");
+        }
+        return hitService.getViewStatistics(start, end, uris, unique);
     }
 
     @PostMapping("/hit")
-    //public ResponseEntity<Object> addHit(@Validated(Marker.OnCreate.class) @RequestBody IncomingHitDto incomingHitDto) {
     public ResponseHitDto addHit(@Validated(Marker.OnCreate.class) @RequestBody IncomingHitDto incomingHitDto) {
         log.info("Получен запрос на сохранение информации о том что эндпойнт запрашивали");
         incomingHitDto.setCreated(LocalDateTime.now());
-        //return hitClient.addHit(incomingHitDto);
+
         return hitService.addHit(incomingHitDto);
     }
 }
